# tt-metal_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dependencies/: CMakeLists.txt
src/: hello_world_compute_kernel.cpp
